// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill applies the elementAttributes prop correctly 1`] = `
<div
  aria-label="foo"
  data-radium={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
      "borderRadius": 16,
      "color": "white",
      "display": "inline-block",
      "margin": "8px",
      "padding": "0 8px",
      "textAlign": "center",
      "width": "auto",
    }
  }
>
  HI
</div>
`;

exports[`Pill renders correctly when style overrides are provided 1`] = `
<div
  data-radium={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
      "borderRadius": 16,
      "color": "white",
      "display": "inline-block",
      "margin": "8px",
      "padding": "0 8px",
      "textAlign": "center",
      "textDecoration": "underline",
      "width": "auto",
    }
  }
>
  HI
</div>
`;

exports[`Pill renders without throwing 1`] = `
<div
  data-radium={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
      "borderRadius": 16,
      "color": "white",
      "display": "inline-block",
      "margin": "8px",
      "padding": "0 8px",
      "textAlign": "center",
      "width": "auto",
    }
  }
>
  HI
</div>
`;
